syntax = "proto3";

package err_code;

enum ErrorCode
{
	NoError = 0;	//成功
	LoginOtherPlace = 1;	//账号在别处登录
	ConnectGameFail = 2;	//连接游戏服失败
	LoginException = 3;		//登录异常
	DbQueryException = 4;	//查询异常
	DbInsertException = 5;	//插入异常
	DbUpdateException = 6;	//更新异常
	LoginAuthFail = 7;		//登录验证失败
	LoginNoAccount = 8;		//第三方平台无账号
	InvalidOperation = 9;	//非法操作
	AccountRepeated = 10;	//账号已存在
	CreateUserFail = 11;	//创建角色失败，不存在账号
	TargetFriendCountMax = 100;	//对方好友已达上限
}

