syntax = "proto3";

package login;

//proj:服务名-连接名;system:系统模块名
//*代表所有连接

//客户端请求gate服务器地址
message CSQueryServerAddrReq	//proj:balance-*;system:login
{
	uint32 zone_id = 1;	//区id
}

//客户端请求gate服务器地址
message SCQueryServerAddrAck	//proj:client-*;system:login
{
	string server_addr = 1;		//ip:port
}


//创建角色
message CSCreateAccountReq //proj:login-*|db-*;system:login
{
	string	account_name = 1;			//游客账号密码为空
	string 	passwd = 2;
	uint32  platform_id = 3;
	uint32  server_id = 4;
}

//创建角色结果
message SCCreateAccountAck	//proj:login-*|gate-*;system:login
{
	int32 result = 1;
	string	account_name = 2;
	string 	passwd = 3;
	uint32 user_id = 4;
	string login_sess = 5;
}

//角色信息
message msgLoginUserInfo
{
	uint32 user_id = 1;		//角色id
	uint32 server_id = 2;		//所在服务器id
	uint32 last_login_ts = 3;	//上次登录时间
	string user_nick = 4;		//角色昵称
	uint32 user_head_icon = 5;	//头像
}

//登录验证
message CSLoginReq //proj:login-*|db-*;system:login
{
	string account_name = 1;
	string passwd = 2;
	uint32 platform_id = 3;
}

//登录验证结果
message SCLoginAck //proj:login-*|gate-*;system:login
{
	int32 result = 1;
	repeated msgLoginUserInfo user_list = 2;
	string login_sess = 3;
}
